# sysos

./: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  main.go
archcode/: BUILD.bazel  archcode.go  archcode_arm64.syso  archcode_test.go  wrap_arch_code_amd64.s  wrap_arch_code_arm64.s
prebuilt/: archcode_amd64.syso
src/: BUILD.bazel  Makefile  archcode.c
