# gazelle:ignore
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "nogo", "go_binary")

# gazelle:prefix github.com/eljobe/sysos
gazelle(name = "gazelle")

nogo(
    name = "nogo",
     visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

go_binary(
    name = "arch_name",
    srcs = [
        "main.go",
        # Hack "prebuilt/archcode_amd64.syso",
    ],
    deps = ["//archcode:go_default_library"],
)
