module(
    name = "sysos",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")
go_sdk.nogo(nogo = "//:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# TODO: Remove when https://github.com/bazelbuild/rules_go/issues/4084 is resolved
go_deps.module(
    path = "golang.org/x/tools",
    # curl https://sum.golang.org/lookup/golang.org/x/tools@v0.24.0
    sum = "h1:J1shsA93PJUEVaUSaay7UXAyE8aimq3GW0pjlolpa24=",
    version = "v0.24.0",
)

use_repo(
    go_deps,
    "org_golang_x_tools",
)
